ignore potato cart in vscode search

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "vscode-lua-format.configPath": "./lua-style-conf"
+  "vscode-lua-format.configPath": "./lua-style-conf",
+  "search.exclude": {
+    "**/carts/potato/": true
+  }
 }
